--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -6,6 +6,7 @@
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Drama' %>
           <%= f.submit class: 'btn btn-flat' %>
+          <%= f.input :photo, as: :file, label: 'Add a photo' %>
         <% end %>
       </div>
     </div>
